# unitree_IL_lerobot

./: .gitmodules  debug_multimodal_data.py  pyproject.toml
unitree_lerobot/: setup.py
unitree_lerobot/eval_robot/eval_g1/: README.md  eval_g1.py  eval_g1_dataset.py  eval_real_config.py
unitree_lerobot/eval_robot/eval_g1/image_server/: image_client.py  image_server.py
unitree_lerobot/eval_robot/eval_g1/robot_control/: robot_hand_unitree.py
unitree_lerobot/utils/: convert_unitree_json_to_h5.py  convert_unitree_json_to_lerobot.py
