[tool.poetry]
name = "unitree_lerobot"
version = "0.1.0"
description = "unitree data conversion and real machine inference verification"
readme = "README.md"
license = "Apache-2.0"
authors = ["Unitree Robotics <support@unitree.com>"]
packages = [{include = "unitree_lerobot"}]
requires-python = ">=3.8,<3.11"

[tool.poetry.dependencies]
torch = "2.1.0a0+41361538.nv23.6"
torchvision = "0.16.2"
transformers = "^4.25.0"
tyro = "^0.5.0"
matplotlib = "^3.5.0"
datasets = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

